--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
                 <img srcset="img/picture-square@2x.jpg" alt="Picture of girl reading on a tablet">
             </picture>
         </figure>
+
+        <aside class="c-author">
+            <img class="c-author__image" src="img/avatar.jpg" alt="Picture of Simon Coudeville">
+            <div clas="c-author__content">
+                <h2 class="c-author__name">
+                    Simon Coudeville
+                </h2>
+                <p class="c-author__title">
+                    User Interface Designer
+                    <span>
+                        <span></span>
+                    </span>
+                </p>
+            </div>
+        </aside>
+
         <p>
             As we refine our methods of responsive web design,* we’ve increasingly focus*ed on measure (another word for “line length”) and its relationship to how people read. The popularization of the “ideal measure” has led to advice such as “Increase font size for large screens and reduce font size for small screens.” While a good measure does improve the reading experience, it’s only one rule for good typography. Another rule is to maintain a comfortable font size.
         </p>
